[fix] fixed z-index for search button and removed js console log

--- a/modules/Utils/GenericBrowser/theme/default.css
+++ b/modules/Utils/GenericBrowser/theme/default.css
@@ -710,7 +710,7 @@ div.expandable.expanded {
 	border-radius: 50px;
 	margin-left: 9px;
 	position: absolute;
-	z-index: 99999;
+	z-index: 99;
 }
 
 button#search-button:hover {
